# uuid6-python

./: .editorconfig  README.md  bench.sh  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: main.yml  publish-to-test-pypi.yml
src/uuid6/: __init__.py
test/: test_uuid6.py  test_vectors.py
